장소대여 관련 코드 작성